dev/network/vpc.tf
resource "aws_vpc" "main_vpc" {
  cidr_block = var.vpc.cidr_block

  enable_dns_support = true
  enable_dns_hostnames = true
}
